--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,21 +1,18 @@
----
-root: true
-
-plugins:
-  - jest
-  - babel
-
 env:
+  es2021: true
   node: true
-  jest: true
   browser: true
-
-parser: "@babel/eslint-parser"
-
 extends:
-  - "airbnb-base"
-  - "plugin:jest/recommended"
-
+  - 'airbnb-base'
+parserOptions:
+  ecmaVersion: latest
+  sourceType: module
 rules:
+  import/prefer-default-export: 'off'
   no-console: 0
-  import/extensions: 0
+  import/extensions: # FIXME: remove when rule will be adjusted for new nodejs ver
+    - error
+    - ignorePackages
+    - js: always
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
+  no-param-reassign: 0
