--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "i18next": "^22.0.4",
     "lodash": "^4.17.21",
